checkOffsetAndCount is now provided in an external public utility class : JayoUtils